roles
added ability  to select roles when registering